# design-system

./: .eleventy.js  .gitignore  MANIFEST.in  README.md  dev-requirements.txt  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yaml
.github/workflows/: deploy.yml  release.yaml  run-tests.yml
.husky/: pre-commit
basics/colors/: index.html
basics/dark/: index.html
basics/forms/: index.html
basics/modular-scale/: index.html
basics/type/: index.html
components/breadcrumbs/: index.html
components/button/: index.html
components/call-to-action/: index.html
components/candidate/: index.html
components/card/: index.html
components/checkbox/: index.html
components/cluster/: index.html
components/codeblock/: index.html
components/date-picker/: index.html
components/description-lists/: index.html
components/details/: index.html
components/filter/: index.html
components/footer/: index.html
components/grid/: index.html
components/header/: index.html
components/language/: index.html
components/logo/: index.html
components/party/: index.html
components/radio-button/: index.html
components/select/: index.html
components/showcase/: index.html
docs/: index.html
docs/styles/: site.css  (+3 more)
layout-demo/: index.html
layout-demo-dark/: index.html
layout_content/: index.html
python-package/: __init__.py  app.py
scripts/: run-tests.sh  update-fonts.py  write-image-baseline.sh
src-sass/: button.scss  call-to-action.scss  card.scss  classes-colors.scss  classes-scales.scss  cluster.scss  colors-classes.scss  colors.scss  grid.scss  index.example.scss  scales-classes.scss  scales.scss  stack.scss  system-demo.scss  type.scss  variables.scss
src-site/: index.md  layout-dark.md  layout.md  layout_content.md
styles/: system.css.map
system/: docs.scss  index.scss  index.template.scss  system-core.scss
tests/: Dockerfile  conftest.py  screenshot_utils.py  test_lighthouse.py  test_screenshots.py  write_screenshot_baseline.py
(+142 files in other folders)
