[project]
name = "dc_design_system"
version = "2.6.6"
description = "SCSS and images for the DC design system"
readme = "README.md"
authors = [{name = "Sym Roe"}, {name = "Heydon Pickering"}]

dependencies = [
	"npm-run-all",
	"pytest",
	"lighthouse @ git+https://github.com/f02h/lighthouse-python.git#egg=lighthouse",
]

[project.urls]
Homepage = "https://github.com/DemocracyClub/design-system"
Changelog = "https://github.com/DemocracyClub/design-system/releases"
Issues = "https://github.com/DemocracyClub/design-system/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80

[project.optional-dependencies]
test = ["pytest", "pytest-flakes"]