[project]
name = "dc_design_system"
version = "0.4.13"
description = "SCSS and images for the DC design system"
readme = "README.md"
authors = [{name = "Sym Roe"}, {name = "Heydon Pickering"}]

[project.urls]
Homepage = "https://github.com/DemocracyClub/design-system"
Changelog = "https://github.com/DemocracyClub/design-system/releases"
Issues = "https://github.com/DemocracyClub/design-system/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80

